*Empty MediaWiki Message*

--- a/Teräsbetoni.mw
+++ b/Teräsbetoni.mw
@@ -1,5 +1,5 @@
 [[Fail:Teräsbetoni_032008_Ahola_03.jpg|thumb|right|Solist i vokalist Jarkko Ahola]]
-'''Teräsbetoni''' (''[[Suomen kel'|Suomen kelel]] – raudbeton'') om [[Suomenma|suomalaine]] hevi-metalgrupp, kudamban aluz oli pandud vl 2002 [[Tampere]]s. Debütine al'bom oli pästtud 2005 vodel.
+'''«Teräsbetoni»''' (''[[Suomen kel'|Suomen kelel]] – raudbeton'') om [[Suomenma|suomalaine]] hevi-metalgrupp, kudamban aluz oli pandud vl 2002 [[Tampere]]s. Debütine al'bom oli pästtud 2005 vodel.
 
 Jarkko Ahola, gruppan solist, pajati ende [[Dreamtale]]-gruppas mugažo.
 
