*Empty MediaWiki Message*

--- a/Bitlad.mw
+++ b/Bitlad.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''The Beatles''' om [[Sur' Britanii|britanijalaine]] muzikaline [[rok]]grupp.
+'''«The Beatles»''' om [[Sur' Britanii|britanijalaine]] muzikaline [[rok]]grupp.
 
 Mülükund:
 * [[Džon Lennon]] (John Lennon)
@@ -22,9 +22,9 @@ Mülükund:
 * ''[[Let It Be]]'' (1970)
 {{stub}}
 
-[[Kategorii:Poprokgruppad]]
-[[Kategorii:Muzikgruppad kirjamišton mödhe]]
-[[Kategorii:Suren Britanijan muzikgruppad]]
+[[Kategorii:Poprokgruppad|b]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe|b]]
+[[Kategorii:Suren Britanijan muzikgruppad|b]]
 
 [[af:The Beatles]]
 [[am:ዘ ቢተልስ]]
