*Empty MediaWiki Message*

--- a/The_Rasmus.mw
+++ b/The_Rasmus.mw
@@ -1,4 +1,4 @@
-'''The Rasmus''' om [[Suomi|suomalaine]] muzikaline rokgrupp.
+'''«The Rasmus»''' om [[Suomi|suomalaine]] muzikaline rokgrupp.
 
 Mülükund:
 * [[Lauri Ülönen]] (Lauri Ylönen)
@@ -17,9 +17,9 @@ Mülükund:
 * ''[[The Rasmus (al'bom)|The Rasmus]]'' (2012)
 {{stub}}
 
-[[Kategorii:Al'ternativižed rokguppad]]
-[[Kategorii:Muzikgruppad kirjamišton mödhe]]
-[[Kategorii:Suomenman muzikgruppad]]
+[[Kategorii:Al'ternativižed rokguppad|r]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe|r]]
+[[Kategorii:Suomenman muzikgruppad|r]]
 
 [[ar:ذا راسموس]]
 [[ast:The Rasmus]]
