*Empty MediaWiki Message*

--- a/The_Weather_Girls.mw
+++ b/The_Weather_Girls.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = [[Armstid Izora|Izora Armstid]], [[Uoš Marta|Marta Uoš]]
  | Sait = http://www.theweathergirls.com/
 }}
-'''The Weather Girls''' om [[AÜV|amerikalaine]] diskopopgrupp, vlspäi. [[1977]]. Tetab mülükund oli ''[[Armstid Izora|Izora Armstid]]'' da ''[[Uoš Marta|Marta Uoš]]''. Nügüdläižes mülükundas oma ''Dainell Rods'' da ''Ingrid Artur'', Armstidan tütred.
+'''«The Weather Girls»''' om [[AÜV|amerikalaine]] diskopopgrupp, vlspäi. [[1977]]. Tetab mülükund oli ''[[Armstid Izora|Izora Armstid]]'' da ''[[Uoš Marta|Marta Uoš]]''. Nügüdläižes mülükundas oma ''Dainell Rods'' da ''Ingrid Artur'', Armstidan tütred.
 
 == Diskografii ==
 
@@ -32,9 +32,9 @@
 * ''Can You Feel It'' (1993)
 {{stub}}
 
-[[Kategorii:Diskogruppad]]
-[[Kategorii:Muzikgruppad kirjamišton mödhe]]
-[[Kategorii:AÜV:oiden muzikgruppad‎]]
+[[Kategorii:Diskogruppad|w]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe|w]]
+[[Kategorii:AÜV:oiden muzikgruppad|w‎]]
 
 [[cs:The Weather Girls]]
 [[de:Weather Girls]]
