*Empty MediaWiki Message*

--- a/U2.mw
+++ b/U2.mw
@@ -1,5 +1,5 @@
 [[Fail:2005-11-21 U2 @ MSG by ZG.JPG|thumb|200px|U2]]
-'''U2''' om [[Irlandii|irlandijalaine]] muzikaline rokgrupp.
+'''«U2»''' om [[Irlandii|irlandijalaine]] muzikaline rokgrupp.
 
 Mülükund:
 * Bono
