*Empty MediaWiki Message*

--- a/Vintaž_(popgrupp).mw
+++ b/Vintaž_(popgrupp).mw
@@ -1,4 +1,4 @@
-'''Vintaž''' ([[venäkel'|venäkelel]]: ''Винтаж'') om populärine [[Venäma|venälaine]] muzikaline popgrupp.
+'''«Vintaž»''' ([[venäkel'|venäkelel]]: ''Винтаж'') om populärine [[Venäma|venälaine]] muzikaline popgrupp.
 
 Mülükund:
 * [[Pletnöva Anna|Anna Pletnöva]]
