--- a/Windir.mw
+++ b/Windir.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Sorg, Cosmocrator, Vegard 
  | Sait = http://www.windir.no
 }}
-'''Windir''' oli [[Norvegii|norvegijalaine]] muzikgrupp, kudamb edesti [[blekmetal|must]]- da [[vikingmetal]]-žanroiš.
+'''«Windir»''' oli [[Norvegii|norvegijalaine]] muzikgrupp, kudamb edesti [[blekmetal|must]]- da [[vikingmetal]]-žanroiš.
 
 Grupp oli tehnus vl 1994 [[Sogndal]]as ([[Norvegii]]). Sen muzikas mustmetal garmoniruib fol'klorižen da mifologižen motivoidenke. Ezmäine al'bom om pästtud vl 1997. Pajoiden sur' pala om kirjutadud norvegijan kelen sogndaližel dialektal.
 
