*Empty MediaWiki Message*

--- a/Zhi-Vago.mw
+++ b/Zhi-Vago.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = 
 }}
-'''Zhi-Vago''' oli [[Saksanma|sakslaine]] evrodensgrupp (vspäi [[1996]] vhesai [[2002]]).
+'''«Zhi-Vago»''' oli [[Saksanma|sakslaine]] evrodensgrupp (vspäi [[1996]] vhesai [[2002]]).
 
 == Diskografii ==
 
