*Empty MediaWiki Message*

--- a/Üebermutter.mw
+++ b/Üebermutter.mw
@@ -1,4 +1,4 @@
-'''Üebermutter''' (errativine kirjutamine, oiged — ''Übermutter'' "ülämam") om [[Saksanma|germanijalaine]] industrialine metalgrupp. Kogoneb nelläs neiččespäi da priha-gitaristaspäi. Gruppan pämez' om [[Lüsi van Org]] — aktris, kirjutai da radio-didžei.
+'''«Üebermutter»''' (errativine kirjutamine, oiged — ''Übermutter'' "ülämam") om [[Saksanma|germanijalaine]] industrialine metalgrupp. Kogoneb nelläs neiččespäi da priha-gitaristaspäi. Gruppan pämez' om [[Lüsi van Org]] — aktris, kirjutai da radio-didžei.
 
 == Diskografii ==
 * Unheil! (2008)
