--- a/Zhi-Vago.mw
+++ b/Zhi-Vago.mw
@@ -18,7 +18,7 @@
 == Diskografii ==
 
 === Singlad ===
-* ''Celebrate (The Love)'' (1996)
+* ''[[Celebrate (The Love)]]'' (1996)
 * ''Dreamer'' (1996)
 * ''With or Without You'' (1996)
 * ''Teardrops from Heaven'' (1997)
