--- a/Zhi-Vago.mw
+++ b/Zhi-Vago.mw
@@ -2,7 +2,7 @@
  | Nimi = Zhi-Vago
  | Logo = 
  | Foto = 
- | Žanrad = [[evrodens]]
+ | Žanrad = [[evrodens]], [[haus (muzikaline stil')|haus]]
  | Voded = 1996—2002
  | Valdkund = Saksanma
  | Lidn = 
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = 
 }}
-'''«Zhi-Vago»''' oli [[Saksanma|sakslaine]] evrodensgrupp (vspäi [[1996]] vhesai [[2002]]).
+'''«Zhi-Vago»''' oli [[Saksanma|sakslaine]] evrodens- da [[haus (muzikaline stil')|hausprojekt]](vspäi [[1996]] vhesai [[2002]]).
 
 == Diskografii ==
 
@@ -26,8 +26,10 @@
 {{stub}}
 
 [[Kategorii:Evrodensgruppad]]
+[[Kategorii:Hausgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Saksanman muzikgruppad]]
+[[Kategorii:Muzikaližed projektad]]
 
 [[en:Zhi-Vago]]
 [[fr:Zhi-Vago]]
