*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -2,9 +2,11 @@
 '''«You're My Heart, You're My Soul»''' (''Sinä oled minun südäikera, sinä oled minun heng'') om „[[Modern Talking]]“:an tetab pajo da ühtinnimine singl «[[The 1st Album]]»-al'bomas, kudamb om pästtud [[1984]]-žen voden redukul.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
+
+== Kacu mugažo ==
+* [[You're My Heart, You're My Soul '98]]
 {{stub}}
 {{Modern Talking}}
-
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:Debütižed singlad]]
