хорошо что заглянула))

--- a/You're_My_Heart,_You're_My_Soul_'98.mw
+++ b/You're_My_Heart,_You're_My_Soul_'98.mw
@@ -8,3 +8,5 @@ Om «[[You're My Heart, You're My Soul]]»-pajon uz' versii, kudamb om pästtud 
 [[Kategorii:Modern Talking:an pajod]]
 
 [[az:You're My Heart, You're My Soul '98 (Modern Talking)]]
+[[es:You're My Heart, You're My Soul '98]]
+[[pl:You're My Heart, You're My Soul '98]]
