*Empty MediaWiki Message*

--- a/Brother_Louie.mw
+++ b/Brother_Louie.mw
@@ -1,6 +1,10 @@
 '''«Brother Louie»''' (''Vell' Lui'') om [[Modern Talking]]:an tetab pajo da ühtinnimine singl «[[Ready for Romance]]»-al'bomas, kudamb om pästtud [[1986]]-žen voden vilukul.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
+
+== Kacu mugažo ==
+* [[Brother Louie '98]]
+* [[Brother Louie '99]]
 {{stub}}
 {{Modern Talking}}
 
