--- a/Modern_Talking:an_diskografii.mw
+++ b/Modern_Talking:an_diskografii.mw
@@ -112,12 +112,12 @@ Se om täuz' '''[[Modern Talking]]-kollektivan diskografii'''.
 # '''[[TV Makes the Superstar]]''' — 3. keväz'ku 2003
 
 == Erazvuitte ==
-# '''[[Do You Wanna]]''' — 2001 '''''([[buglet]]-singl)'''''
-# '''[[Just Like An Angel]]''' — 2001 '''''([[buglet]]-singl)'''''
-# '''[[I Need You Now]]''' — 2001 '''''([[buglet]]-singl)'''''
-# '''[[New York City Girl]]''' — 2001 '''''([[buglet]]-singl)'''''
-# '''[[Summer In December]]''' — 2002 '''''([[buglet]]-singl)'''''
-# '''[[10 Seconds To Countdown]]''' — 2002 '''''([[buglet]]-singl)'''''
+# '''[[Do You Wanna]]''' — 2001 '''''([[butleg]]-singl)'''''
+# '''[[Just Like An Angel]]''' — 2001 '''''(butleg-singl)'''''
+# '''[[I Need You Now]]''' — 2001 '''''(butleg-singl)'''''
+# '''[[New York City Girl]]''' — 2001 '''''(butleg-singl)'''''
+# '''[[Summer In December]]''' — 2002 '''''(butleg-singl)'''''
+# '''[[10 Seconds To Countdown]]''' — 2002 '''''(butleg-singl)'''''
 
 == Kacu mugažo ==
 * [[Modern Talking:an pajod]]
