*Empty MediaWiki Message*

--- a/Just_Like_An_Angel.mw
+++ b/Just_Like_An_Angel.mw
@@ -1,6 +1,6 @@
 '''«Just Like An Angel»''' (''Aniku angel'') om 5. pajo [[Modern Talking]]:an «[[Let's Talk About Love]]»-al'bomas.
 
-Pajon [[buglet]]-singl om pästtud [[2002]]-žel vodel DJ RavL:alpäi.
+Pajon [[butleg]]-singl om pästtud [[2001]]-žel vodel DJ RavL:alpäi.
 {{stub}}
 {{Modern Talking}}
 
