*Empty MediaWiki Message*

--- a/Do_You_Wanna.mw
+++ b/Do_You_Wanna.mw
@@ -1,6 +1,6 @@
 '''«Do You Wanna»''' (''Void-ik sinä?..'') om 6. pajo [[Modern Talking]]:an «[[The 1st Album]]»-al'bomas.
 
-Pajon [[buglet]]-singl om pästtud [[2001]]-žel vodel DJ RavL:alpäi.
+Pajon [[butleg]]-singl om pästtud [[2001]]-žel vodel DJ RavL:alpäi.
 {{stub}}
 {{Modern Talking}}
 
