*Empty MediaWiki Message*

--- a/Brother_Louie_'98.mw
+++ b/Brother_Louie_'98.mw
@@ -1,6 +1,9 @@
 '''«Brother Louie '98»''' (''Vell' Lui; 98. voz<nowiki>'</nowiki>'') om [[Modern Talking]]:an singl «[[Back for Good]]»-al'bomas; pästtud [[1998]]-žel vodel.
 
 Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vodel «[[Ready for Romance]]»-al'bomas.
+
+== Kacu mugažo ==
+* [[Brother Louie '99]]
 {{stub}}
 {{Modern Talking}}
 
