*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul_'98.mw
+++ b/You're_My_Heart,_You're_My_Soul_'98.mw
@@ -5,7 +5,7 @@ Om «[[You're My Heart, You're My Soul]]»-pajon uz' versii, kudamb om pästtud 
 {{Modern Talking}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
-[[Kategorii:Modern Talking:an pajod]]
+[[Kategorii:Modern Talking:an singlad]]
 
 [[az:You're My Heart, You're My Soul '98 (Modern Talking)]]
 [[es:You're My Heart, You're My Soul '98]]
