*Empty MediaWiki Message*

--- a/Brother_Louie_'99.mw
+++ b/Brother_Louie_'99.mw
@@ -8,4 +8,4 @@ Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vode
 {{Modern Talking}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
-[[Kategorii:Modern Talking:an pajod]]
+[[Kategorii:Modern Talking:an singlad]]
