--- a/Brother_Louie_'98.mw
+++ b/Brother_Louie_'98.mw
@@ -8,7 +8,7 @@ Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vode
 {{Modern Talking}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
-[[Kategorii:Modern Talking:an pajod]]
+[[Kategorii:Modern Talking:an singlad]]
 
 [[az:Brother Louie '98 (Modern Talking)]]
 [[es:Brother Louie '98]]
