*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul_'98.mw
+++ b/You're_My_Heart,_You're_My_Soul_'98.mw
@@ -4,7 +4,7 @@ Om «[[You're My Heart, You're My Soul]]»-pajon uz' versii, kudamb om pästtud 
 {{stub}}
 {{Modern Talking}}
 
-[[Kategorii:Pajod kirjamišton mödhe]]
+[[Kategorii:Singlad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an singlad]]
 
 [[az:You're My Heart, You're My Soul '98 (Modern Talking)]]
