*Empty MediaWiki Message*

--- a/Space_Mix_'98.mw
+++ b/Space_Mix_'98.mw
@@ -2,7 +2,7 @@
 {{stub}}
 {{Modern Talking}}
 
-[[Kategorii:Pajod kirjamišton mödhe]]
+[[Kategorii:Singlad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an singlad]]
 
 [[en:Space Mix '98]]
