*Empty MediaWiki Message*

--- a/Brother_Louie_'99.mw
+++ b/Brother_Louie_'99.mw
@@ -7,5 +7,5 @@ Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vode
 {{stub}}
 {{Modern Talking}}
 
-[[Kategorii:Pajod kirjamišton mödhe]]
+[[Kategorii:Singlad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an singlad]]
