*Empty MediaWiki Message*

--- a/Celebrate_(The_Love).mw
+++ b/Celebrate_(The_Love).mw
@@ -4,3 +4,4 @@ Se om klassine pajo [[haus (muzikaline stil')|haus]]-žanras.
 {{stub}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
+[[Kategorii:Debütižed singlad‎]]
