--- a/Brother_Louie_'98.mw
+++ b/Brother_Louie_'98.mw
@@ -7,7 +7,7 @@ Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vode
 {{stub}}
 {{Modern Talking}}
 
-[[Kategorii:Pajod kirjamišton mödhe]]
+[[Kategorii:Singlad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an singlad]]
 
 [[az:Brother Louie '98 (Modern Talking)]]
