*Empty MediaWiki Message*

--- a/Rahvahan_ühtmuden_päiv.mw
+++ b/Rahvahan_ühtmuden_päiv.mw
@@ -1,4 +1,4 @@
-'''Rahvahan (rahvahaližen) ühtmuden päiv''' ([[venäkel'|ven.]]: ''День народного единства'') om [[Venäma]]n valdkundpraznik. Oigetas [[1. kül'mku|kül'mkun 1.]] päiväl; oli oigetud vl [[2005]].
+'''Rahvahan (rahvahaližen) ühtmuden päiv''' ([[venäkel'|ven.]]: ''День народного единства'') om [[Venäma]]n valdkundpraznik. Oigetas [[1. kül'mku|kül'mkun 1. päiväl]]; oli oigetud vl [[2005]].
 {{stub}}
 
 [[Kategorii:Praznikad]]
