--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -42,6 +42,7 @@
 * ''[[Give Me Peace on Earth]]'' (1986)
 * ''[[Jet Airliner]]'' (1987)
 * ''[[In 100 Years...]]'' (1987)
+* ''[[We Take the Chance]]'' (1998)
 * ''[[You Are Not Alone]]'' (1999)
 * ''[[Sexy Sexy Lover]]'' (1999)
 * ''[[China In Her Eyes]]'' (2000)
