*Empty MediaWiki Message*

--- a/Šarlotk.mw
+++ b/Šarlotk.mw
@@ -1,3 +1,4 @@
+[[Fail:Charlotte pie.JPG|thumb|right|250px|Šarlotk]]
 '''Šarlotk''' ([[francijan kel'|franc.]]: ''Charlotte'', [[venäkel'|ven.]]: ''Шарлотка'') om maged [[pirg]], tobjimalaz [[jablok]]ašpäi.
 
 == Kacu mugažo ==
