*Empty MediaWiki Message*

--- a/Šarlotk.mw
+++ b/Šarlotk.mw
@@ -1,4 +1,4 @@
-[[Fail:Charlotte pie.JPG|thumb|right|250px|Šarlotk]]
+[[Fail:Charlotte pie.JPG|thumb|right|250px|Kodihine šarlotk jablokašpäi da [[čigičaine|čigičaižespäi]]]]
 '''Šarlotk''' ([[francijan kel'|franc.]]: ''Charlotte'', [[venäkel'|ven.]]: ''Шарлотка'') om maged [[pirg]], tobjimalaz [[jablok]]ašpäi.
 
 == Kacu mugažo ==
