*Empty MediaWiki Message*

--- a/Šarlotk.mw
+++ b/Šarlotk.mw
@@ -1,5 +1,5 @@
 [[Fail:Charlotte pie.JPG|thumb|right|250px|Kodihine šarlotk jablokoišpäi da [[čigičaine|čigičaižespäi]]]]
-'''Šarlotk''' ([[francijan kel'|franc.]]: ''Charlotte'', [[venäkel'|ven.]]: ''Шарлотка'') om maged [[pirg]], tobjimalaz [[jablok]]ašpäi.
+'''Šarlotk''' ([[francijan kel'|franc.]]: ''Charlotte'', [[venäkel'|ven.]]: ''Шарлотка'') om maged [[pirg]], tobjimalaz [[jablok]]oišpäi.
 
 == Kacu mugažo ==
 * [[Venälaine šarlotk]]
