Так, может быть?

--- a/Back_for_Good.mw
+++ b/Back_for_Good.mw
@@ -1,4 +1,4 @@
-'''«Back for Good»''' (''Pörim kerdhaks'') om [[Modern Talking]]:an 7. al'bom, pästtud [[30. keväz'ku]]s, [[1998]]. vodes.
+'''«Back for Good»''' (''Pörduim kerdhaks'') om [[Modern Talking]]:an 7. al'bom, pästtud [[30. keväz'ku]]s, [[1998]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[You're My Heart, You're My Soul]] (new version)'' (3:47)
