*Empty MediaWiki Message*

--- a/Balling_Nora.mw
+++ b/Balling_Nora.mw
@@ -1,4 +1,4 @@
-'''Eleonora-Izabel' Balling (Anders)''' ([[saksan kel'|saks.]]: ''Nora-Isabelle Balling (Anders)''; sünd. [[31. heinku]] [[1964]], [[Koblenc]], [[Saksanma]]) om sakslaine fotomodel', ezmäine [[Anders Tomas|Tomasan Andersan]] ([[Modern Talking]]:an ekssolistan) ak (1985—1999).
+'''Eleonora-Izabel' Balling (Anders)''' ([[saksan kel'|saks.]]: ''Nora-Isabelle Balling (Anders)''; sünd. [[31. heinku]] [[1964]], [[Koblenc]], [[Saksanma]]) om sakslaine fotomodel', ezmäine [[Tomas Anders|Tomasan Andersan]] ([[Modern Talking]]:an ekssolistan) ak (1985—1999).
 
 Arni hän provociruidud [[Modern Talking]]:an ezmäine čihodamine [[1987]]. vodes.
 {{stub}}
