--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -9,11 +9,11 @@
  | Kel' = [[anglijan kel'|anglijan]]
  | Leiblad = [[SonyBMG]]
  | Toižed projektad = [[Blue System]]
- | Mülükund = [[Anders Tomas|Tomas Anders]], [[Bolen Diter|Diter Bolen]]
+ | Mülükund = [[Tomas Anders]], [[Bolen Diter|Diter Bolen]]
  | Eksühtnijad = 
  | Sait = http://www.sonymusic.de/Modern-Talking
 }}
-'''«Modern Talking»''' oli legendine [[Saksanma|saksalaine]] [[sintipop]]grupp [[Hamburg]]aspäi, vodespäi [[1984]] da vodehesai [[2003]]. Mülükund oli ''[[Anders Tomas|Tomas Anders]]'' da ''[[Bolen Diter|Diter Bolen]]''.
+'''«Modern Talking»''' oli legendine [[Saksanma|saksalaine]] [[sintipop]]grupp [[Hamburg]]aspäi, vodespäi [[1984]] da vodehesai [[2003]]. Mülükund oli ''[[Tomas Anders]]'' da ''[[Bolen Diter|Diter Bolen]]''.
 
 == Diskografii ==
 {{kacu|Modern Talking:an diskografii}}
