*Empty MediaWiki Message*

--- a/Tomas_Anders.mw
+++ b/Tomas_Anders.mw
@@ -1,5 +1,5 @@
 [[Fail:Koblenz im Buga-Jahr 2011 - Buga-Abschlussveranstaltung 01.jpg|thumb|right|220px|Tomas Anders, 2011]]
-'''Tomas Anders''' ([[saksan kel'|saks.]]: ''Thomas Anders''; todesine nimi — '''Bernd Vaidung''' ([[saksan kel'|saks.]]: ''Bernd Weidung''); sünd. [[1. keväz'ku]] [[1963]], [[Münstermaifel'd]], [[Saksanma]]) om sakslaine pajatai, muzikankirjutai da prodüsser, [[Modern Talking]]:an eksühtnii.
+'''Tomas Anders''' ([[saksan kel'|saks.]]: ''Thomas Anders''; todesine nimi — '''Bernd Vaidung''' ([[saksan kel'|saks.]]: ''Bernd Weidung''); sünd. [[1. keväz'ku]] [[1963]], [[Münstermaifel'd]], [[Saksanma]]) om sakslaine pajatai, muzikankirjutai da prodüser, [[Modern Talking]]:an eksühtnii.
 
 == Solodiskografii ==
 :: '''''<u>[[:en:Thomas Anders#Discography|Kacu tänna]]</u>'''''
@@ -16,6 +16,6 @@
 [[Kategorii:Saksanman pajatajad]]
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Muzikankirjutajad kirjamišton mödhe]]
-[[Kategorii:Prodüsserad]]
+[[Kategorii:Prodüserad]]
 
 [[en:Thomas Anders]]
