--- a/Tomas_Anders.mw
+++ b/Tomas_Anders.mw
@@ -11,6 +11,8 @@
 
 == Irdkosketused ==
 * [http://www.thomas-anders.com/ Oficialine sait]
+{{stub}}
+{{Modern Talking}}
 
 [[Kategorii:Modern Talking]]
 [[Kategorii:Saksanman pajatajad]]
