*Empty MediaWiki Message*

--- a/You_Are_Not_Alone.mw
+++ b/You_Are_Not_Alone.mw
@@ -1,4 +1,4 @@
-'''«You Are Not Alone»''' (''Sinä ei oled üks'jäine'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[Alone]]»-al'bomas, kudamb om pästtud [[1999]]-žen voden uhokul.
+'''«You Are Not Alone»''' (''Sinä ed ole üks'jäine'') om [[Modern Talking]]:an pajo da ühtinnimine singl «[[Alone]]»-al'bomas, kudamb om pästtud [[1999]]-žen voden uhokul.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
