Kävutajan [[Special:Contributions/85.173.159.59|85.173.159.59]] ([[User talk:85.173.159.59|Lodud]]) tožetused oma endištadud edeližhe versijahasai (avtor: [[User:MerlIwBot|MerlIwBot]])

--- a/Ueils_Džimmi.mw
+++ b/Ueils_Džimmi.mw
@@ -1,5 +1,5 @@
 [[Fail:Jimmy Wales 706.jpg|thumb|right|250px|Džimmi Uels]]
-'''Jimmy Donal Wales''' ([[anglijan kel'|angl.]]: ''Jimmy Donal Wales''; [[nikneim]] — '''Jimbo Wales'''; sünd. [[7. eloku]] [[1966]], [[Hantsvill (Alabam)]], [[AÜV]]) om amerikalaine edheotai, [[Vikipedii|Vikipedijan]] alusenpanii, [[Vikimedii]]-fondan ezimez'.
+'''Džimmi Donal Uels''' ([[anglijan kel'|angl.]]: ''Jimmy Donal Wales''; [[nikneim]] — '''Jimbo Wales'''; sünd. [[7. eloku]] [[1966]], [[Hantsvill (Alabam)]], [[AÜV]]) om amerikalaine edheotai, [[Vikipedii|Vikipedijan]] alusenpanii, [[Vikimedii]]-fondan ezimez'.
 {{stub}}
 
 [[Kategorii:Vikimedii]]
