*Empty MediaWiki Message*

--- a/Balling_Nora.mw
+++ b/Balling_Nora.mw
@@ -5,6 +5,7 @@ Arni hän provociruidud [[Modern Talking]]:an ezmäine čihodamine [[1987]]. vod
 {{Modern Talking}}
 
 [[Kategorii:Fotomodelid]]
+[[Kategorii:Modern Talking]]
 
 [[en:Nora Balling]]
 [[ro:Nora Balling]]
