*Empty MediaWiki Message*

--- a/Bolen_Diter.mw
+++ b/Bolen_Diter.mw
@@ -1,4 +1,4 @@
-[[Fail:Dieter Bohlen Moscow 2009.jpeg|thumb|right|250px|Diter Bolen]]
+[[Fail:Dieter Bohlen Moscow 2009.jpeg|thumb|right|250px|Diter Bolen, 2009]]
 '''Diter Günter Bolen''' ([[saksan kel'|saks.]]: ''Dieter Günter Bohlen''; sünd. [[7. uhoku]] [[1954]], [[Berne (lidn, Saksanma)|Berne]], [[Saksanma]]) om sakslaine pajatai, muzikankirjutai, prodüser da TV-person, [[Modern Talking]]:an eksühtnii.
 
 == Kacu mugažo ==
