--- a/Mustjogen_sild.mw
+++ b/Mustjogen_sild.mw
@@ -1,7 +1,9 @@
 [[Fail:Chiornorechenskij bridge.jpg|thumb|right|300px|Mustjogen sild]]
 '''Mustjogen sild''' ([[Venäkel'|ven.]] ''Чернореченский мост'') om sild [[Piter]]iš [[Mustjogi (Suren Nevkan ližajogi)|Mustjoges]] päliči.
 
+{{stub}}
+
 [[Kategorii:Piterin sildad]]
-[[Kategorii:Sildad kirjišton mödhe]]
+[[Kategorii:Sildad kirjamišton mödhe]]
 
 [[ru:Чернореченский мост]]
