*Empty MediaWiki Message*

--- a/Kuldaine_Verai_(sild).mw
+++ b/Kuldaine_Verai_(sild).mw
@@ -3,7 +3,7 @@
 {{stub}}
 
 [[Kategorii:Sauvused kirjamišton mödhe‎|k]]
-[[Kategorii:Sildad|k]]
+[[Kategorii:Kategorii:Sildad kirjamišton mödhe|k]]
 
 [[an:Puent Golden Gate]]
 [[ar:جسر البوابة الذهبية]]
