--- a/Mustjogen_sild.mw
+++ b/Mustjogen_sild.mw
@@ -5,5 +5,6 @@
 
 [[Kategorii:Piterin sildad]]
 [[Kategorii:Sildad kirjamišton mödhe]]
+[[Kategorii:Sauvused kirjamišton mödhe]]
 
 [[ru:Чернореченский мост]]
