--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -14,19 +14,19 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 ! scope="col" class="unsortable"| Lidn-ižand
 |-
 ! scope="row" | [[Evrovizii-1956|1956]]
-| {{Esc|Switzerland}}
-| "[[Refrain (song)|Refrain]]"
-| [[Lys Assia]]
-| [[Géo Voumard]], [[Émile Gardaz]]
-| {{n/a}}</onlyinclude><ref group="N" name="1956result">The full results of the 1956 contest were never released; only the winner is known.</ref><onlyinclude>
-| {{n/a}}
-| {{n/a}}
-| 24 May
-| {{flagicon|SUI}} [[Lugano]]
+| [[Fail:Flag of Switzerland.svg|border|20px]] [[Šveicarii]]
+| «[[Refrain]]»
+| [[Assia Liz|Liz Assia]]
+| ''Géo Voumard'', ''Émile Gardaz''
+| ei ole
+| ei ole
+| ei ole
+| 24. semendku
+| [[Fail:Flag of Switzerland.svg|border|20px]] [[Lugano]]
 |-
 ! scope="row" | [[Evrovizii-1957|1957]]
-| {{Esc|Netherlands}}
-| "[[Net als toen]]"
+| [[Alamad]]
+| «[[Net als toen]]»
 | [[Corry Brokken]]
 | Guus Jansen, [[Willy van Hemert]]
 | {{nts|31}}
@@ -36,8 +36,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Frankfurt|Frankfurt am Main]]
 |-
 ! scope="row" | [[Evrovizii-1958|1958]]
-| {{Esc|France}}
-| "[[Dors, mon amour]]"
+| [[Francii]]
+| «[[Dors, mon amour]]»
 | [[André Claveau]]
 | [[Pierre Delanoë]], [[Hubert Giraud]]
 | {{nts|27}}
@@ -47,8 +47,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[Hilversum]]
 |-
 ! scope="row" | [[Evrovizii-1959|1959]]
-| {{Esc|Netherlands}}
-| "[[Een beetje]]"
+| [[Alamad]]
+| «[[Een beetje]]»
 | [[Teddy Scholten]]
 | Dick Schallies, [[Willy van Hemert]]
 | {{nts|21}}
@@ -58,8 +58,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1960|1960]]
-| {{Esc|France}}
-| "[[Tom Pillibi]]"
+| [[Francii]]
+| «[[Tom Pillibi]]»
 | [[Jacqueline Boyer]]
 | [[André Popp]], [[Pierre Cour]]
 | {{nts|32}}
@@ -69,8 +69,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" | [[Evrovizii-1961|1961]]
-| {{Esc|Luxembourg}}
-| "[[Nous les amoureux]]"
+| [[Lüksemburg]]
+| «[[Nous les amoureux]]»
 | [[Jean-Claude Pascal]]
 | [[Jacques Datin]], Maurice Vidalin
 | {{nts|31}}
@@ -80,8 +80,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1962|1962]]
-| {{Esc|France}}
-| "[[Un premier amour]]"
+| [[Francii]]
+| «[[Un premier amour]]»
 | [[Isabelle Aubret]]
 | Claude-Henri Vic, Roland Stephane Valade
 | {{nts|26}}
@@ -91,8 +91,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1963|1963]]
-| {{Esc|Denmark}}
-| "[[Dansevise]]"
+| [[Danii]]
+| «[[Dansevise]]»
 | [[Grethe and Jørgen Ingmann]]
 | Otto Francker, Sejr Volmer-Sørensen
 | {{nts|42}}
@@ -103,8 +103,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 |}</includeonly></onlyinclude>
 |-
 ! scope="row" | [[Evrovizii-1964|1964]]
-| {{Esc|Italy}}
-| "[[Non ho l'età]]"
+| [[Italii]]
+| «[[Non ho l'età]]»
 | [[Gigliola Cinquetti]]
 | [[Nicola Salerno]], Mario Pinzeri
 | {{nts|49}}
@@ -114,8 +114,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-1965|1965]]
-| {{Esc|Luxembourg}}
-| "[[Poupée de cire, poupée de son]]"
+| [[Lüksemburg]]
+| «[[Poupée de cire, poupée de son]]»
 | [[France Gall]]
 | [[Serge Gainsbourg]]
 | {{nts|32}}
@@ -125,8 +125,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ITA}} [[Naples]]
 |-
 ! scope="row" | [[Evrovizii-1966|1966]]
-| {{Esc|Austria}}
-| "[[Merci, Chérie]]"
+| [[Avstrii]]
+| «[[Merci, Chérie]]»
 | [[Udo Jürgens]]
 | Udo Jürgens, Thomas Hörbiger
 | {{nts|31}}
@@ -136,8 +136,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1967|1967]]
-| {{Esc|United Kingdom}}
-| "[[Puppet on a String]]"
+| [[Sur' Britanii]]
+| «[[Puppet on a String]]»
 | [[Sandie Shaw]]
 | [[Bill Martin (musician)|Bill Martin]], [[Phil Coulter]]
 | {{nts|47}}
@@ -147,8 +147,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|AUT}} [[Vienna]]
 |-
 ! scope="row" | [[Evrovizii-1968|1968]]
-| {{Esc|Spain|1945}}
-| "[[La, la, la]]"
+| [[Ispanii]]
+| «[[La, la, la]]»
 | [[Massiel]]
 | [[Dúo Dinámico|Manuel de la Calva, Ramón Arcusa]]
 | {{nts|29}}
@@ -158,8 +158,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" rowspan=4|[[Evrovizii-1969|1969]]<ref>Oliba nell' vägestajad.</ref>
-| {{Esc|Spain|1945}}
-| "[[Vivo cantando]]"
+| [[Ispanii]]
+| «[[Vivo cantando]]»
 | [[Salomé (singer)|Salomé]]
 | Maria José de Cerato, Aniano Alcalde
 |rowspan=4|{{nts|18}}
@@ -168,24 +168,24 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 |rowspan=4| 29 March
 |rowspan=4| {{flagicon|ESP|1945}} [[Madrid]]
 |-
-| {{Esc|United Kingdom}}
-| "[[Boom Bang-a-Bang]]"
+| [[Sur' Britanii]]
+| «[[Boom Bang-a-Bang]]»
 | [[Lulu (singer)|Lulu]]
 | Alan Moorhouse, Peter Warne
 |-
-| {{Esc|Netherlands}}
-| "[[De troubadour]]"
+| [[Alamad]]
+| «[[De troubadour]]»
 | [[Lenny Kuhr]]
 | Lenny Kuhr, David Hartsema
 |-
-| {{Esc|France}}
-| "[[Un jour, un enfant]]"
+| [[Francii]]
+| «[[Un jour, un enfant]]»
 | [[Frida Boccara]]
 | Émile Stern, [[Eddy Marnay]]
 |-
 ! scope="row" | [[Evrovizii-1970|1970]]
-| {{Esc|Ireland}}
-| "[[All Kinds of Everything]]"
+| [[Irlandii]]
+| «[[All Kinds of Everything]]»
 | [[Dana Rosemary Scallon|Dana]]
 | Derry Lindsay, Jackie Smith
 | {{nts|32}}
@@ -195,8 +195,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[Amsterdam]]
 |-
 ! scope="row" | [[Evrovizii-1971|1971]]
-| {{Esc|Monaco}}
-| "[[Un banc, un arbre, une rue]]"
+| [[Monak]]
+| «[[Un banc, un arbre, une rue]]»
 | [[Séverine (singer)|Séverine]]
 | Jean-Pierre Bourtayre, Yves Dessca
 | 128
@@ -206,8 +206,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1972|1972]]
-| {{Esc|Luxembourg}}
-| "[[Après toi]]"
+| [[Lüksemburg]]
+| «[[Après toi]]»
 | [[Vicky Leandros]]
 | [[Mario Panas]], Klaus Munro, Yves Dessca
 | 128
@@ -217,8 +217,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Edinburgh]]
 |-
 ! scope="row" | [[Evrovizii-1973|1973]]
-| {{Esc|Luxembourg}}
-| "[[Tu te reconnaîtras]]"
+| [[Lüksemburg]]
+| «[[Tu te reconnaîtras]]»
 | [[Anne-Marie David]]
 | Claude Morgan, Vline Buggy
 | 129
@@ -228,8 +228,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1974|1974]]
-| {{Esc|Sweden}}
-| "[[Waterloo (ABBA song)|Waterloo]]"
+| [[Ročinma]]
+| «[[Waterloo (ABBA song)|Waterloo]]»
 | [[ABBA]]
 | [[Benny Andersson]], [[Björn Ulvaeus]], [[Stig Anderson]]
 | {{nts|24}}
@@ -239,8 +239,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Brighton]]
 |-
 ! scope="row" | [[Evrovizii-1975|1975]]
-| {{Esc|Netherlands}}
-| "[[Ding-a-dong]]"
+| [[Alamad]]
+| «[[Ding-a-dong]]»
 | [[Teach-In]]
 | Dick Bakker, [[Eddy Ouwens]], Will Luikinga
 | 152
@@ -250,9 +250,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Stockholm]]
 |-
 ! scope="row" | [[Evrovizii-1976|1976]]
-| {{Esc|United Kingdom}}
-| "[[Save Your Kisses for Me]]"
-| [[Brotherhood of Man (band)|Brotherhood of Man]]
+| [[Sur' Britanii]]
+| «[[Save Your Kisses for Me]]»
+| [[Brotherhood of Man]]
 | [[Tony Hiller]], [[Lee Sheriden]], [[Martin Lee (singer)|Martin Lee]]
 | 164
 | {{nts|17}}
@@ -261,8 +261,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[The Hague]]
 |-
 ! scope="row" | [[Evrovizii-1977|1977]]
-| {{Esc|France}}
-| "[[L'oiseau et l'enfant]]"
+| [[Francii]]
+| «[[L'oiseau et l'enfant]]»
 | [[Marie Myriam]]
 | [[Jean Paul Cara]], Joe Gracy
 | 136
@@ -272,8 +272,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" | [[Evrovizii-1978|1978]]
-| {{Esc|Israel}}
-| "[[A-Ba-Ni-Bi]]" (א-ב-ני-בי)
+| [[Izrail']]
+| «[[A-Ba-Ni-Bi|א-ב-ני-בי]]»
 | [[Izhar Cohen]] and the [[Alphabeta]]
 | [[Nurit Hirsh]], [[Ehud Manor]]
 | 157
@@ -283,8 +283,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Paris]]
 |-
 ! scope="row" | [[Evrovizii-1979|1979]]
-| {{Esc|Israel}}
-| "[[Hallelujah (Gali Atari and Milk & Honey song)|Hallelujah]]" (הללויה)
+| [[Izrail']]
+| «[[Hallelujah|הללויה]]»
 | [[Gali Atari]] and [[Milk and Honey (group)|Milk and Honey]]
 | [[Kobi Oshrat]], Shimrit Orr
 | 125
@@ -294,8 +294,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ISR}} [[Jerusalem]]
 |-
 ! scope="row" | [[Evrovizii-1980|1980]]
-| {{Esc|Ireland}}
-| "[[What's Another Year]]"
+| [[Irlandii]]
+| «[[What's Another Year]]»
 | [[Johnny Logan (singer)|Johnny Logan]]
 | [[Shay Healy]]
 | 143
@@ -305,9 +305,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[The Hague]]
 |-
 ! scope="row" | [[Evrovizii-1981|1981]]
-| {{Esc|United Kingdom}}
-| "[[Making Your Mind Up]]"
-| [[Bucks Fizz (band)|Bucks Fizz]]
+| [[Sur' Britanii]]
+| «[[Making Your Mind Up]]»
+| [[Bucks Fizz]]
 | John Danter, [[Andy Hill (composer)|Andy Hill]]
 | 136
 | {{nts|4}}
@@ -316,8 +316,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1982|1982]]
-| {{Esc|Germany}}
-| "[[Ein bißchen Frieden]]"
+| [[Saksanma]]
+| «[[Ein bißchen Frieden]]»
 | [[Nicole (German singer)|Nicole]]
 | [[Ralph Siegel (songwriter)|Ralph Siegel]], [[Bernd Meinunger]]
 | 161
@@ -327,8 +327,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Harrogate]]
 |-
 ! scope="row" | [[Evrovizii-1983|1983]]
-| {{Esc|Luxembourg}}
-| "[[Si la vie est cadeau]]"
+| [[Lüksemburg]]
+| «[[Si la vie est cadeau]]»
 | [[Corinne Hermès]]
 | Jean-Pierre Millers, Alain Garcia
 | 142
@@ -338,8 +338,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Munich]]
 |-
 ! scope="row" | [[Evrovizii-1984|1984]]
-| {{Esc|Sweden}}
-| "[[Diggi-Loo Diggi-Ley]]"
+| [[Ročinma]]
+| «[[Diggi-Loo Diggi-Ley]]»
 | [[Herreys]]
 | [[Torgny Söderberg]], Britt Lindeborg
 | 145
@@ -349,8 +349,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1985|1985]]
-| {{Esc|Norway}}
-| "[[La det swinge]]"
+| [[Norvegii]]
+| «[[La det swinge]]»
 | [[Bobbysocks!]]
 | [[Rolf Løvland]]
 | 123
@@ -360,8 +360,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Gothenburg]]
 |-
 ! scope="row" | [[Evrovizii-1986|1986]]
-| {{Esc|Belgium}}
-| "[[J'aime la vie]]"
+| [[Bel'gii]]
+| «[[J'aime la vie]]»
 | [[Sandra Kim]]
 | Jean-Paul Furnémont, Angelo Crisci, <br>Rosario Marino Atria
 | 176
@@ -371,8 +371,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Bergen]]
 |-
 ! scope="row" | [[Evrovizii-1987|1987]]
-| {{Esc|Ireland}}
-| "[[Hold Me Now (Johnny Logan song)|Hold Me Now]]"
+| [[Irlandii]]
+| «[[Hold Me Now]]»
 | [[Johnny Logan (singer)|Johnny Logan]]
 | [[Johnny Logan (singer)|Johnny Logan]]
 | 172
@@ -382,8 +382,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|BEL}} [[Brussels]]
 |-
 ! scope="row" | [[Evrovizii-1988|1988]]
-| {{Esc|Switzerland}}
-| "[[Ne partez pas sans moi]]"
+| [[Šveicarii]]
+| «[[Ne partez pas sans moi]]»
 | [[Celine Dion]]
 | [[Atilla Şereftuğ]], [[Nella Martinetti]]
 | 137
@@ -393,9 +393,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1989|1989]]
-| {{Esc|Yugoslavia}}
-| "[[Rock Me (Riva song)|Rock Me]]"
-| [[Riva (music group)|Riva]]
+| [[Jugoslavii]]
+| «[[Rock Me]]»
+| [[Riva]]
 | Rajko Dujmić, Stevo Cvikić
 | 137
 | {{nts|7}}
@@ -404,8 +404,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SUI}} [[Lausanne]]
 |-
 ! scope="row" | [[Evrovizii-1990|1990]]
-| {{Esc|Italy}}
-| "[[Insieme: 1992]]"
+| [[Italii]]
+| «[[Insieme: 1992]]»
 | [[Toto Cutugno]]
 | Toto Cutugno
 | 149
@@ -415,8 +415,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|YUG}} [[Zagreb]]
 |-
 ! scope="row" | [[Evrovizii-1991|1991]]
-| {{Esc|Sweden}}
-| "[[Fångad av en stormvind]]"
+| [[Ročinma]]
+| «[[Fångad av en stormvind]]»
 | [[Carola Häggkvist|Carola]]
 | [[Stephan Berg]]
 | 146
@@ -426,8 +426,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ITA}} [[Rome]]
 |-
 ! scope="row" | [[Evrovizii-1992|1992]]
-| {{Esc|Ireland}}
-| "[[Why Me? (Linda Martin song)|Why Me]]"
+| [[Irlandii]]
+| «[[Why Me]]»
 | [[Linda Martin]]
 | [[Johnny Logan (singer)|Johnny Logan]]
 | 155
@@ -437,8 +437,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Malmö]]
 |-
 ! scope="row" | [[Evrovizii-1993|1993]]
-| {{Esc|Ireland}}
-| "[[In Your Eyes (Niamh Kavanagh song)|In Your Eyes]]"
+| [[Irlandii]]
+| «[[In Your Eyes]]»
 | [[Niamh Kavanagh]]
 | Jimmy Walsh
 | 187
@@ -448,8 +448,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Millstreet]]
 |-
 ! scope="row" | [[Evrovizii-1994|1994]]
-| {{Esc|Ireland}}
-| "[[Rock 'n' Roll Kids]]"
+| [[Irlandii]]
+| «[[Rock 'n' Roll Kids]]»
 | [[Paul Harrington (musician)|Paul Harrington]] and [[Charlie McGettigan]]
 | [[Brendan Graham|Brendan J. Graham]]
 | 226
@@ -459,8 +459,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1995|1995]]
-| {{Esc|Norway}}
-| "[[Nocturne (Secret Garden song)|Nocturne]]"
+| [[Norvegii]]
+| «[[Nocturne]]»
 | [[Secret Garden (duo)|Secret Garden]]
 | [[Rolf Løvland]], Petter Skavland
 | 148
@@ -470,8 +470,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1996|1996]]
-| {{Esc|Ireland}}
-| "[[The Voice (Eimear Quinn song)|The Voice]]"
+| [[Irlandii]]
+| «[[The Voice]]»
 | [[Eimear Quinn]]
 | [[Brendan Graham|Brendan J. Graham]]
 | 162
@@ -481,8 +481,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Oslo]]
 |-
 ! scope="row" | [[Evrovizii-1997|1997]]
-| {{Esc|United Kingdom}}
-| "[[Love Shine a Light]]"
+| [[Sur' Britanii]]
+| «[[Love Shine a Light]]»
 | [[Katrina and the Waves]]
 | [[Kimberley Rew]]
 | 227
@@ -492,8 +492,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1998|1998]]
-| {{Esc|Israel}}
-| "[[Diva (song)|Diva]]" (דיווה)
+| [[Izrail']]
+| «[[Diva|דיווה]]»
 | [[Dana International]]
 | [[Svika Pick]], Yoav Ginai
 | 172
@@ -503,8 +503,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Birmingham]]
 |-
 ! scope="row" | [[Evrovizii-1999|1999]]
-| {{Esc|Sweden}}
-| "[[Take Me to Your Heaven (song)|Take Me to Your Heaven]]"
+| [[Ročinma]]
+| «[[Take Me to Your Heaven]]»
 | [[Charlotte Perrelli|Charlotte Nilsson]]
 | [[Lars Diedricson|Lars 'Dille' Diedricson]], Marcos Ubeda
 | 163
@@ -514,8 +514,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ISR}} [[Jerusalem]]
 |-
 ! scope="row" | [[Evrovizii-2000|2000]]
-| {{Esc|Denmark}}
-| "[[Fly on the Wings of Love]]"
+| [[Danii]]
+| «[[Fly on the Wings of Love]]»
 | [[Olsen Brothers]]
 | [[Jørgen Olsen]]
 | 195
@@ -525,8 +525,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Stockholm]]
 |-
 ! scope="row" | [[Evrovizii-2001|2001]]
-| {{Esc|Estonia}}
-| "[[Everybody (Tanel Padar and Dave Benton song)|Everybody]]"
+| [[Estinma]]
+| «[[Everybody]]»
 | [[Tanel Padar]], [[Dave Benton]] and [[Soul Militia|2XL]]
 | [[Ivar Must]], [[Maian-Anna Kärmas]]
 | 198
@@ -536,9 +536,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-2002|2002]]
-| {{Esc|Latvia}}
-| "[[I Wanna (Marie N song)|I Wanna]]"
-|  [[Marija Naumova|Marie N]]
+| [[Latvii]]
+| «[[I Wanna]]»
+| [[Marie N]]
 | Marie N, Marats Samauskis
 | 176
 | {{nts|12}}
@@ -547,8 +547,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|EST}} [[Tallinn]]
 |-
 ! scope="row" | [[Evrovizii-2003|2003]]
-| {{Esc|Turkey}}
-| "[[Everyway That I Can]]"
+| [[Turcii]]
+| «[[Everyway That I Can]]»
 | [[Sertab Erener]]
 | [[Demir Demirkan]], Sertab Erener
 | 167
@@ -558,9 +558,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LVA}} [[Riga]]
 |-
 ! scope="row" | [[Evrovizii-2004|2004]]
-| {{Esc|Ukraine}}
-| "[[Wild Dances (single)|Wild Dances]]"
-| [[Ruslana (singer)|Ruslana]]
+| [[Ukrain]]
+| «[[Wild Dances]]»
+| [[Ruslana]]
 | Ruslana, Oleksandr Ksenofontov
 | 280
 | {{nts|17}}
@@ -569,9 +569,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|TUR}} [[Istanbul]]
 |-
 ! scope="row" | [[Evrovizii-2005|2005]]
-| {{Esc|Greece}}
-| "[[My Number One]]"
-| [[Elena Paparizou|Helena Paparizou]]
+| [[Grekanma]]
+| «[[My Number One]]»
+| [[Elena Paparizou]]
 | [[Christos Dantis]], [[Natalia Germanou]]
 | 230
 | {{nts|38}}
@@ -580,8 +580,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|UKR}} [[Kiev]]
 |-
 ! scope="row" | [[Evrovizii-2006|2006]]
-| {{Esc|Finland}}
-| "[[Hard Rock Hallelujah]]"
+| [[Suomenma]]
+| «[[Hard Rock Hallelujah]]»
 | [[Lordi]]
 | [[Tomi Putaansuu|Mr. Lordi]]
 | 292
@@ -591,8 +591,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GRE}} [[Athens]]
 |-
 ! scope="row" | [[Evrovizii-2007|2007]]
-| {{Esc|Serbia}}
-| "[[Molitva]]" (Молитва)
+| [[Serbii]]
+| «[[Molitva|Молитва]]»
 | [[Marija Šerifović]]
 | Saša Milošević Mare, [[Vladimir Graić]]
 | 268
@@ -602,9 +602,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FIN}} [[Helsinki]]
 |-
 ! scope="row" | [[Evrovizii-2008|2008]]
-| {{Esc|Russia}}
-| "[[Believe (Dima Bilan song)|Believe]]"
-| [[Dima Bilan]]
+| [[Venäma]]
+| «[[Believe]]»
+| [[Bilan Dima|Dima Bilan]]
 | [[Jim Beanz]], Dima Bilan
 | 272
 | {{nts|42}}
@@ -613,8 +613,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SRB}} [[Belgrade]]
 |-
 ! scope="row" | [[Evrovizii-2009|2009]]
-| {{Esc|Norway}}
-| "[[Fairytale (Alexander Rybak song)|Fairytale]]"
+| [[Norvegii]]
+| «[[Fairytale]]»
 | [[Alexander Rybak]]
 | Alexander Rybak
 | 387
@@ -624,8 +624,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|RUS}} [[Moscow]]
 |-
 ! scope="row" | [[Evrovizii-2010|2010]]
-| {{Esc|Germany}}
-| "[[Satellite (Lena Meyer-Landrut song)|Satellite]]"
+| [[Saksanma]]
+| «[[Satellite (Lena Meyer-Landrut song)|Satellite]]»
 | [[Lena Meyer-Landrut|Lena]]
 | [[Julie Frost]], John Gordon
 | 246
@@ -635,8 +635,8 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Oslo]]
 |-
 ! scope="row" | [[Evrovizii-2011|2011]]
-| {{Esc|Azerbaijan}}
-| "[[Running Scared (Eldar & Nigar song)|Running Scared]]"
+| [[Azerbaidžan]]
+| «[[Running Scared]]»
 | [[Eldar & Nigar|Ell/Nikki]]
 | [[Stefan Örn]], Sandra Bjurman, Iain Farquharson
 | 221
@@ -646,9 +646,9 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Düsseldorf]]
 |-
 ! scope="row" | [[Evrovizii-2012|2012]]
-| {{Esc| Sweden}}
-| "[[Euphoria (Loreen song)|Euphoria]]"
-| [[Loreen (singer)|Loreen]]
+| [[Ročinma]]
+| «[[Euphoria]]»
+| [[Lorin]]
 | [[Thomas G:son]], [[Peter Boström]]
 | 372
 | {{nts|113}}
