*Empty MediaWiki Message*

--- a/Kuldaine_Verai_(sild).mw
+++ b/Kuldaine_Verai_(sild).mw
@@ -2,7 +2,7 @@
 '''«Kuldaine verai»''' om sild [[San Francisko]]s.
 {{stub}}
 
-[[Kategorii:Sauvused kirjamišton mödhe‎|k]]
+[[Kategorii:San Francisko]]
 [[Kategorii:Sildad kirjamišton mödhe|k]]
 
 [[an:Puent Golden Gate]]
