*Empty MediaWiki Message*

--- a/Joudjuden_kuvapatsaz.mw
+++ b/Joudjuden_kuvapatsaz.mw
@@ -3,9 +3,8 @@
 '''Joudjuden statui''' ([[anglijan kel'|angl.]]: ''Statue of Liberty'') vai '''Joudjuden muštpacaz''' om arhitekturine muštnik [[AÜV]]:oiš, uks' mel'heižtahoišpäi [[Nju Jork]]as. Muštpachan korktuz om 93 metrad.
 {{stub}}
 
-[[Kategorii:Muštpachad]]
+[[Kategorii:Muštpachad kirjamišton mödhe]]
 [[Kategorii:Uz' Jork]]
-[[Kategorii:Sauvused kirjamišton mödhe]]
 
 [[af:Vryheidstandbeeld]]
 [[an:Estatua d'a Libertat]]
