Пока только в виде флагов

--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -25,7 +25,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | [[Fail:Flag of Switzerland.svg|border|20px]] [[Lugano]]
 |-
 ! scope="row" | [[Evrovizii-1957|1957]]
-| [[Alamad]]
+| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[Net als toen]]»
 | [[Corry Brokken]]
 | Guus Jansen, [[Willy van Hemert]]
@@ -36,7 +36,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Frankfurt|Frankfurt am Main]]
 |-
 ! scope="row" | [[Evrovizii-1958|1958]]
-| [[Francii]]
+| [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Dors, mon amour]]»
 | [[André Claveau]]
 | [[Pierre Delanoë]], [[Hubert Giraud]]
@@ -47,7 +47,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[Hilversum]]
 |-
 ! scope="row" | [[Evrovizii-1959|1959]]
-| [[Alamad]]
+| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[Een beetje]]»
 | [[Teddy Scholten]]
 | Dick Schallies, [[Willy van Hemert]]
@@ -58,7 +58,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1960|1960]]
-| [[Francii]]
+| [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Tom Pillibi]]»
 | [[Jacqueline Boyer]]
 | [[André Popp]], [[Pierre Cour]]
@@ -69,7 +69,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" | [[Evrovizii-1961|1961]]
-| [[Lüksemburg]]
+| [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Nous les amoureux]]»
 | [[Jean-Claude Pascal]]
 | [[Jacques Datin]], Maurice Vidalin
@@ -80,7 +80,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Cannes]]
 |-
 ! scope="row" | [[Evrovizii-1962|1962]]
-| [[Francii]]
+| [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Un premier amour]]»
 | [[Isabelle Aubret]]
 | Claude-Henri Vic, Roland Stephane Valade
@@ -91,7 +91,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1963|1963]]
-| [[Danii]]
+| [[Fail:Flag of Denmark.svg|border|20px]] [[Danii]]
 | «[[Dansevise]]»
 | [[Grethe and Jørgen Ingmann]]
 | Otto Francker, Sejr Volmer-Sørensen
@@ -103,7 +103,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 |}</includeonly></onlyinclude>
 |-
 ! scope="row" | [[Evrovizii-1964|1964]]
-| [[Italii]]
+| [[Fail:Flag of Italy.svg|border|20px]] [[Italii]]
 | «[[Non ho l'età]]»
 | [[Gigliola Cinquetti]]
 | [[Nicola Salerno]], Mario Pinzeri
@@ -114,7 +114,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-1965|1965]]
-| [[Lüksemburg]]
+| [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Poupée de cire, poupée de son]]»
 | [[France Gall]]
 | [[Serge Gainsbourg]]
@@ -125,7 +125,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ITA}} [[Naples]]
 |-
 ! scope="row" | [[Evrovizii-1966|1966]]
-| [[Avstrii]]
+| [[Fail:Flag of Austria.svg|border|20px]] [[Avstrii]]
 | «[[Merci, Chérie]]»
 | [[Udo Jürgens]]
 | Udo Jürgens, Thomas Hörbiger
@@ -136,7 +136,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1967|1967]]
-| [[Sur' Britanii]]
+| [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Puppet on a String]]»
 | [[Sandie Shaw]]
 | [[Bill Martin (musician)|Bill Martin]], [[Phil Coulter]]
@@ -147,7 +147,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|AUT}} [[Vienna]]
 |-
 ! scope="row" | [[Evrovizii-1968|1968]]
-| [[Ispanii]]
+| [[Fail:Flag of Spain.svg|border|20px]] [[Ispanii]]
 | «[[La, la, la]]»
 | [[Massiel]]
 | [[Dúo Dinámico|Manuel de la Calva, Ramón Arcusa]]
@@ -158,7 +158,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" rowspan=4|[[Evrovizii-1969|1969]]<ref>Oliba nell' vägestajad.</ref>
-| [[Ispanii]]
+| [[Fail:Flag of Spain.svg|border|20px]] [[Ispanii]]
 | «[[Vivo cantando]]»
 | [[Salomé (singer)|Salomé]]
 | Maria José de Cerato, Aniano Alcalde
@@ -168,23 +168,23 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 |rowspan=4| 29 March
 |rowspan=4| {{flagicon|ESP|1945}} [[Madrid]]
 |-
-| [[Sur' Britanii]]
+| [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Boom Bang-a-Bang]]»
 | [[Lulu (singer)|Lulu]]
 | Alan Moorhouse, Peter Warne
 |-
-| [[Alamad]]
+| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[De troubadour]]»
 | [[Lenny Kuhr]]
 | Lenny Kuhr, David Hartsema
 |-
-| [[Francii]]
+| [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[Un jour, un enfant]]»
 | [[Frida Boccara]]
 | Émile Stern, [[Eddy Marnay]]
 |-
 ! scope="row" | [[Evrovizii-1970|1970]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[All Kinds of Everything]]»
 | [[Dana Rosemary Scallon|Dana]]
 | Derry Lindsay, Jackie Smith
@@ -195,7 +195,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[Amsterdam]]
 |-
 ! scope="row" | [[Evrovizii-1971|1971]]
-| [[Monak]]
+| [[Fail:Flag of Monaco.svg|border|20px]] [[Monak]]
 | «[[Un banc, un arbre, une rue]]»
 | [[Séverine (singer)|Séverine]]
 | Jean-Pierre Bourtayre, Yves Dessca
@@ -206,7 +206,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1972|1972]]
-| [[Lüksemburg]]
+| [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Après toi]]»
 | [[Vicky Leandros]]
 | [[Mario Panas]], Klaus Munro, Yves Dessca
@@ -217,7 +217,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Edinburgh]]
 |-
 ! scope="row" | [[Evrovizii-1973|1973]]
-| [[Lüksemburg]]
+| [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Tu te reconnaîtras]]»
 | [[Anne-Marie David]]
 | Claude Morgan, Vline Buggy
@@ -228,7 +228,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1974|1974]]
-| [[Ročinma]]
+| [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Waterloo (ABBA song)|Waterloo]]»
 | [[ABBA]]
 | [[Benny Andersson]], [[Björn Ulvaeus]], [[Stig Anderson]]
@@ -239,7 +239,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Brighton]]
 |-
 ! scope="row" | [[Evrovizii-1975|1975]]
-| [[Alamad]]
+| [[Fail:Flag of the Netherlands.svg|border|20px]] [[Alamad]]
 | «[[Ding-a-dong]]»
 | [[Teach-In]]
 | Dick Bakker, [[Eddy Ouwens]], Will Luikinga
@@ -250,7 +250,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Stockholm]]
 |-
 ! scope="row" | [[Evrovizii-1976|1976]]
-| [[Sur' Britanii]]
+| [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Save Your Kisses for Me]]»
 | [[Brotherhood of Man]]
 | [[Tony Hiller]], [[Lee Sheriden]], [[Martin Lee (singer)|Martin Lee]]
@@ -261,7 +261,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[The Hague]]
 |-
 ! scope="row" | [[Evrovizii-1977|1977]]
-| [[Francii]]
+| [[Fail:Flag of France.svg|border|20px]] [[Francii]]
 | «[[L'oiseau et l'enfant]]»
 | [[Marie Myriam]]
 | [[Jean Paul Cara]], Joe Gracy
@@ -272,7 +272,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[London]]
 |-
 ! scope="row" | [[Evrovizii-1978|1978]]
-| [[Izrail']]
+| [[Fail:Flag of Israel.svg|border|20px]] [[Izrail']]
 | «[[A-Ba-Ni-Bi|א-ב-ני-בי]]»
 | [[Izhar Cohen]] and the [[Alphabeta]]
 | [[Nurit Hirsh]], [[Ehud Manor]]
@@ -283,7 +283,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FRA}} [[Paris]]
 |-
 ! scope="row" | [[Evrovizii-1979|1979]]
-| [[Izrail']]
+| [[Fail:Flag of Israel.svg|border|20px]] [[Izrail']]
 | «[[Hallelujah|הללויה]]»
 | [[Gali Atari]] and [[Milk and Honey (group)|Milk and Honey]]
 | [[Kobi Oshrat]], Shimrit Orr
@@ -294,7 +294,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ISR}} [[Jerusalem]]
 |-
 ! scope="row" | [[Evrovizii-1980|1980]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[What's Another Year]]»
 | [[Johnny Logan (singer)|Johnny Logan]]
 | [[Shay Healy]]
@@ -305,7 +305,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NED}} [[The Hague]]
 |-
 ! scope="row" | [[Evrovizii-1981|1981]]
-| [[Sur' Britanii]]
+| [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Making Your Mind Up]]»
 | [[Bucks Fizz]]
 | John Danter, [[Andy Hill (composer)|Andy Hill]]
@@ -316,7 +316,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1982|1982]]
-| [[Saksanma]]
+| [[Fail:Flag of Germany.svg|border|20px]] [[Saksanma]]
 | «[[Ein bißchen Frieden]]»
 | [[Nicole (German singer)|Nicole]]
 | [[Ralph Siegel (songwriter)|Ralph Siegel]], [[Bernd Meinunger]]
@@ -327,7 +327,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Harrogate]]
 |-
 ! scope="row" | [[Evrovizii-1983|1983]]
-| [[Lüksemburg]]
+| [[Fail:Flag of Luxembourg.svg|border|20px]] [[Lüksemburg]]
 | «[[Si la vie est cadeau]]»
 | [[Corinne Hermès]]
 | Jean-Pierre Millers, Alain Garcia
@@ -338,7 +338,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Munich]]
 |-
 ! scope="row" | [[Evrovizii-1984|1984]]
-| [[Ročinma]]
+| [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Diggi-Loo Diggi-Ley]]»
 | [[Herreys]]
 | [[Torgny Söderberg]], Britt Lindeborg
@@ -349,7 +349,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LUX}} [[Luxembourg City|Luxembourg]]
 |-
 ! scope="row" | [[Evrovizii-1985|1985]]
-| [[Norvegii]]
+| [[Fail:Flag of Norway.svg|border|20px]] [[Norvegii]]
 | «[[La det swinge]]»
 | [[Bobbysocks!]]
 | [[Rolf Løvland]]
@@ -360,7 +360,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Gothenburg]]
 |-
 ! scope="row" | [[Evrovizii-1986|1986]]
-| [[Bel'gii]]
+| [[Fail:Flag of Belgium.svg|border|20px]] [[Bel'gii]]
 | «[[J'aime la vie]]»
 | [[Sandra Kim]]
 | Jean-Paul Furnémont, Angelo Crisci, <br>Rosario Marino Atria
@@ -371,7 +371,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Bergen]]
 |-
 ! scope="row" | [[Evrovizii-1987|1987]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[Hold Me Now]]»
 | [[Johnny Logan (singer)|Johnny Logan]]
 | [[Johnny Logan (singer)|Johnny Logan]]
@@ -382,7 +382,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|BEL}} [[Brussels]]
 |-
 ! scope="row" | [[Evrovizii-1988|1988]]
-| [[Šveicarii]]
+| [[Fail:Flag of Switzerland.svg|border|20px]] [[Šveicarii]]
 | «[[Ne partez pas sans moi]]»
 | [[Celine Dion]]
 | [[Atilla Şereftuğ]], [[Nella Martinetti]]
@@ -393,7 +393,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1989|1989]]
-| [[Jugoslavii]]
+| [[Fail:Flag of SFR Yugoslavia.svg|border|20px]] [[Jugoslavii]]
 | «[[Rock Me]]»
 | [[Riva]]
 | Rajko Dujmić, Stevo Cvikić
@@ -404,7 +404,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SUI}} [[Lausanne]]
 |-
 ! scope="row" | [[Evrovizii-1990|1990]]
-| [[Italii]]
+| [[Fail:Flag of Italy.svg|border|20px]] [[Italii]]
 | «[[Insieme: 1992]]»
 | [[Toto Cutugno]]
 | Toto Cutugno
@@ -415,7 +415,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|YUG}} [[Zagreb]]
 |-
 ! scope="row" | [[Evrovizii-1991|1991]]
-| [[Ročinma]]
+| [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Fångad av en stormvind]]»
 | [[Carola Häggkvist|Carola]]
 | [[Stephan Berg]]
@@ -426,7 +426,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ITA}} [[Rome]]
 |-
 ! scope="row" | [[Evrovizii-1992|1992]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[Why Me]]»
 | [[Linda Martin]]
 | [[Johnny Logan (singer)|Johnny Logan]]
@@ -437,7 +437,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Malmö]]
 |-
 ! scope="row" | [[Evrovizii-1993|1993]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[In Your Eyes]]»
 | [[Niamh Kavanagh]]
 | Jimmy Walsh
@@ -448,7 +448,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Millstreet]]
 |-
 ! scope="row" | [[Evrovizii-1994|1994]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[Rock 'n' Roll Kids]]»
 | [[Paul Harrington (musician)|Paul Harrington]] and [[Charlie McGettigan]]
 | [[Brendan Graham|Brendan J. Graham]]
@@ -459,7 +459,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1995|1995]]
-| [[Norvegii]]
+| [[Fail:Flag of Norway.svg|border|20px]] [[Norvegii]]
 | «[[Nocturne]]»
 | [[Secret Garden (duo)|Secret Garden]]
 | [[Rolf Løvland]], Petter Skavland
@@ -470,7 +470,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1996|1996]]
-| [[Irlandii]]
+| [[Fail:Flag of Ireland.svg|border|20px]] [[Irlandii]]
 | «[[The Voice]]»
 | [[Eimear Quinn]]
 | [[Brendan Graham|Brendan J. Graham]]
@@ -481,7 +481,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Oslo]]
 |-
 ! scope="row" | [[Evrovizii-1997|1997]]
-| [[Sur' Britanii]]
+| [[Fail:Flag of the United Kingdom.svg|border|20px]] [[Sur' Britanii]]
 | «[[Love Shine a Light]]»
 | [[Katrina and the Waves]]
 | [[Kimberley Rew]]
@@ -492,7 +492,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|IRL}} [[Dublin]]
 |-
 ! scope="row" | [[Evrovizii-1998|1998]]
-| [[Izrail']]
+| [[Fail:Flag of Israel.svg|border|20px]] [[Izrail']]
 | «[[Diva|דיווה]]»
 | [[Dana International]]
 | [[Svika Pick]], Yoav Ginai
@@ -503,7 +503,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GBR}} [[Birmingham]]
 |-
 ! scope="row" | [[Evrovizii-1999|1999]]
-| [[Ročinma]]
+| [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Take Me to Your Heaven]]»
 | [[Charlotte Perrelli|Charlotte Nilsson]]
 | [[Lars Diedricson|Lars 'Dille' Diedricson]], Marcos Ubeda
@@ -514,7 +514,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|ISR}} [[Jerusalem]]
 |-
 ! scope="row" | [[Evrovizii-2000|2000]]
-| [[Danii]]
+| [[Fail:Flag of Denmark.svg|border|20px]] [[Danii]]
 | «[[Fly on the Wings of Love]]»
 | [[Olsen Brothers]]
 | [[Jørgen Olsen]]
@@ -525,7 +525,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SWE}} [[Stockholm]]
 |-
 ! scope="row" | [[Evrovizii-2001|2001]]
-| [[Estinma]]
+| [[Fail:Flag of Estonia.svg|border|20px]] [[Estinma]]
 | «[[Everybody]]»
 | [[Tanel Padar]], [[Dave Benton]] and [[Soul Militia|2XL]]
 | [[Ivar Must]], [[Maian-Anna Kärmas]]
@@ -536,7 +536,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|DEN}} [[Copenhagen]]
 |-
 ! scope="row" | [[Evrovizii-2002|2002]]
-| [[Latvii]]
+| [[Fail:Flag of Latvia.svg|border|20px]] [[Latvii]]
 | «[[I Wanna]]»
 | [[Marie N]]
 | Marie N, Marats Samauskis
@@ -547,7 +547,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|EST}} [[Tallinn]]
 |-
 ! scope="row" | [[Evrovizii-2003|2003]]
-| [[Turcii]]
+| [[Fail:Flag of Turkey.svg|border|20px]] [[Turcii]]
 | «[[Everyway That I Can]]»
 | [[Sertab Erener]]
 | [[Demir Demirkan]], Sertab Erener
@@ -558,7 +558,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|LVA}} [[Riga]]
 |-
 ! scope="row" | [[Evrovizii-2004|2004]]
-| [[Ukrain]]
+| [[Fail:Flag of Ukraine.svg|border|20px]] [[Ukrain]]
 | «[[Wild Dances]]»
 | [[Ruslana]]
 | Ruslana, Oleksandr Ksenofontov
@@ -569,7 +569,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|TUR}} [[Istanbul]]
 |-
 ! scope="row" | [[Evrovizii-2005|2005]]
-| [[Grekanma]]
+| [[Fail:Flag of Greece.svg|border|20px]] [[Grekanma]]
 | «[[My Number One]]»
 | [[Elena Paparizou]]
 | [[Christos Dantis]], [[Natalia Germanou]]
@@ -580,7 +580,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|UKR}} [[Kiev]]
 |-
 ! scope="row" | [[Evrovizii-2006|2006]]
-| [[Suomenma]]
+| [[Fail:Flag of Finland.svg|border|20px]] [[Suomenma]]
 | «[[Hard Rock Hallelujah]]»
 | [[Lordi]]
 | [[Tomi Putaansuu|Mr. Lordi]]
@@ -591,7 +591,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GRE}} [[Athens]]
 |-
 ! scope="row" | [[Evrovizii-2007|2007]]
-| [[Serbii]]
+| [[Fail:Flag of Serbia.svg|border|20px]] [[Serbii]]
 | «[[Molitva|Молитва]]»
 | [[Marija Šerifović]]
 | Saša Milošević Mare, [[Vladimir Graić]]
@@ -602,7 +602,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|FIN}} [[Helsinki]]
 |-
 ! scope="row" | [[Evrovizii-2008|2008]]
-| [[Venäma]]
+| [[Fail:Flag of Russia.svg|border|20px]] [[Venäma]]
 | «[[Believe]]»
 | [[Bilan Dima|Dima Bilan]]
 | [[Jim Beanz]], Dima Bilan
@@ -613,7 +613,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|SRB}} [[Belgrade]]
 |-
 ! scope="row" | [[Evrovizii-2009|2009]]
-| [[Norvegii]]
+| [[Fail:Flag of Norway.svg|border|20px]] [[Norvegii]]
 | «[[Fairytale]]»
 | [[Alexander Rybak]]
 | Alexander Rybak
@@ -624,7 +624,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|RUS}} [[Moscow]]
 |-
 ! scope="row" | [[Evrovizii-2010|2010]]
-| [[Saksanma]]
+| [[Fail:Flag of Germany.svg|border|20px]] [[Saksanma]]
 | «[[Satellite (Lena Meyer-Landrut song)|Satellite]]»
 | [[Lena Meyer-Landrut|Lena]]
 | [[Julie Frost]], John Gordon
@@ -635,7 +635,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|NOR}} [[Oslo]]
 |-
 ! scope="row" | [[Evrovizii-2011|2011]]
-| [[Azerbaidžan]]
+| [[Fail:Flag of Azerbaijan.svg|border|20px]] [[Azerbaidžan]]
 | «[[Running Scared]]»
 | [[Eldar & Nigar|Ell/Nikki]]
 | [[Stefan Örn]], Sandra Bjurman, Iain Farquharson
@@ -646,7 +646,7 @@ Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 | {{flagicon|GER}} [[Düsseldorf]]
 |-
 ! scope="row" | [[Evrovizii-2012|2012]]
-| [[Ročinma]]
+| [[Fail:Flag of Sweden.svg|border|20px]] [[Ročinma]]
 | «[[Euphoria]]»
 | [[Lorin]]
 | [[Thomas G:son]], [[Peter Boström]]
