--- a/Stounhendž.mw
+++ b/Stounhendž.mw
@@ -4,7 +4,7 @@
 Stounhendžan znamoičend om tundmatoi. Se voi olda [[observatorii|observatorijan]] vai kaumoiden tahon.
 
 [[Kategorii:Istorii]]
-[[Kategorii:Sauvused kirjamišton mödhe]]
+[[Kategorii:Arheologižed objektad kirjamišton mödhe]]
 
 [[ar:ستونهنج]]
 [[ast:Stonehenge]]
