--- a/Evrovizijan_vägestajad.mw
+++ b/Evrovizijan_vägestajad.mw
@@ -1,4 +1,4 @@
-<center>FOR STEWARDS: PAGE IS UNDER CONSTRUCTION! DO NOT EDIT.</center>
+<center>FOR STEWARDS: PAGE IS UNDER CONSTRUCTION! DO NOT EDIT!</center>
 Se om täuz' '''[[Evrovizii|Evrovizijan]] vägestajiden kirjutez'''.
 {| class="wikitable tsx_sortable" style="font-size: 95"
 |- style="background:#efefef"
