*Empty MediaWiki Message*

--- a/Džeffersonan_memorial.mw
+++ b/Džeffersonan_memorial.mw
@@ -2,9 +2,8 @@
 '''Džeffersonan memorial''' ([[Anglijan kel'|angl.]] ''Jefferson Memorial'') om istorine muštpacaz [[Vašington]]an keskuses.
 {{stub}}
 
-[[Kategorii:Muštpachad]]
+[[Kategorii:Muštpachad kirjamišton mödhe]]
 [[Kategorii:Vašington]]
-[[Kategorii:Sauvused kirjamišton mödhe]]
 
 [[ar:نصب جيفرسون التذكاري]]
 [[be:Мемарыял Джэферсана]]
