Не знаю, нужна такая категория или нет...

--- a/Vauged_Pert'.mw
+++ b/Vauged_Pert'.mw
@@ -12,7 +12,7 @@ Vauktan Pertin kuva om kaks'kümnedollarižel banknotal.
 == Irdkosketused ==
 * [http://www.whitehouse.gov/ Vauktan Pertin oficialine sait] {{ref-en}}
 
-[[Kategorii:Sauvused kirjamišton mödhe]]
+[[Kategorii:Valdkundan pämehiden rezidencijad]]
 [[Kategorii:Vašington]]
 
 [[af:Withuis]]
