--- a/Izborsk.mw
+++ b/Izborsk.mw
@@ -13,13 +13,14 @@
  | Telefonkod = +7-81148
  | Aigvö = [[UTC]]+4
 }}
-'''Izborsk''' ([[venäkel'|ven.]]: ''Изборск'', [[estin kel'|est.]]: ''Irboska'') vai '''Vanh Izborsk''' ([[venäkel'|ven.]]: ''Старый Оскол'') om külä [[Pskovan agj]]an [[Pečoran rajon]]as, [[Izborskan volost'|Izborskan volostan]] keskuz. Se om üks' amuižiš eländpunktašpäi [[Venäma]]s.
+'''Izborsk''' ([[venäkel'|ven.]]: ''Изборск'', [[estin kel'|est.]]: ''Irboska'') vai '''Vanh Izborsk''' ([[venäkel'|ven.]]: ''Старый Изборск'') om külä [[Pskovan agj]]an [[Pečoran rajon]]as, [[Izborskan volost'|Izborskan volostan]] keskuz. Se om üks' amuižiš eländpunktašpäi [[Venäma]]s.
 
 Izborskan eläjiden lugu om 605 ristitud (2008).
 {{stub}}
 
-[[Kategorii:Venäma]]
+[[Kategorii:Pskovan agj]]
 [[Kategorii:Küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[af:Izborsk]]
 [[de:Isborsk]]
