Пока лучше не мельчить

--- a/Porog_(Vitegran_rajon).mw
+++ b/Porog_(Vitegran_rajon).mw
@@ -16,8 +16,8 @@
 '''Porog''' om [[Venäma|Venäman]] külä [[Vologdan agj|Vologdan agj]]an [[Vitegran rajon|Vitegran rajon]]as.
 {{stub}}
 
-[[Category:Venäma]]
-[[Category:Vitegran rajon]]
+[[Kategorii:Vologdan agj]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Порог (Вытегорский район)]]
 [[vo:Porog]]
