*Empty MediaWiki Message*

--- a/Porog_(Vitegran_rajon).mw
+++ b/Porog_(Vitegran_rajon).mw
@@ -18,6 +18,7 @@
 
 [[Kategorii:Vologdan agj]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Venäman küläd]]
 
 [[ru:Порог (Вытегорский район)]]
 [[vo:Porog]]
