*Empty MediaWiki Message*

--- a/Izborsk.mw
+++ b/Izborsk.mw
@@ -19,7 +19,7 @@ Izborskan eläjiden lugu om 605 ristitud (2008).
 {{stub}}
 
 [[Kategorii:Pskovan agj]]
-[[Kategorii:Küläd]]
+[[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[af:Izborsk]]
