*Empty MediaWiki Message*

--- a/Petr_I_Sur'.mw
+++ b/Petr_I_Sur'.mw
@@ -8,6 +8,7 @@ Petr pandihe kunigahaks vodel 1682, konz hänele oli kümne vot, ühtes hänen I
 Suren Petran ohjandusen aigal [[Venäma]] om tehnus sureks Evropižeks valdkundaks.
 
 [[Kategorii:Venäma]]
+[[Kategorii:Valdkundmehed]]
 
 {{Nece kirjutuz Vepsän Vikijas|[http://veps-kir.wikia.com/wiki/Сурь_Петр Сурь Петр]}}
 
