*Empty MediaWiki Message*

--- a/Reboinnena.mw
+++ b/Reboinnena.mw
@@ -8,7 +8,7 @@ Eläjiden lugu om 4759 ristituid.
 * [http://lisiynos.by.ru/ Sait Reboinnenan (Lisii Nosan) polhe]
 
 [[Kategorii:Piter]]
-[[Kategorii:Venäma]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[en:Lisy Nos]]
 [[et:Lissi Noss]]
