--- a/Reboinnena.mw
+++ b/Reboinnena.mw
@@ -1,4 +1,4 @@
-[[Fail:Spb_prim_lisiy_nos.svg|thumb|Reboinnena (Nisii Nos) Piterin kartal]]
+[[Fail:Spb_prim_lisiy_nos.svg|thumb|Reboinnena (Lisii Nos) Piterin kartal]]
 '''Reboinnena''' ([[Venäkel'|ven.]] ''Лисий Нос (Lisii Nos)'', [[Suomen kel'|suom.]] ''Revonnenä'') om žilo [[Venäma]]s, [[Piter]]in [[Primorskii rajon]]as. Sijadase [[Suomen laht]]en randal.
 
 Eläjiden lugu om 4759 ristituid.
